--- a/content/w3.html
+++ b/content/w3.html
@@ -2,7 +2,7 @@
         <head>
         <title>cmsimde_site</title>
         <meta charset="utf-8">
-<meta property="head" content="H1">
+<meta property="head" content="H2">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <link href="https://fonts.googleapis.com/css?family=Quicksand:300,400,500,700,900" rel="stylesheet">
         <link rel="stylesheet" href="./../cmsimde/static/chimper/fonts/icomoon/style.css">
@@ -130,7 +130,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='About.html'>About</a><li><a href='w2-w8.html'>w2-w8</a><li><a href='w3.html'>w3</a><li><a href='w5.html'>w5</a><li><a href='W9.html'>W9</a><li><a href='W11.html'>W11</a><li><a href='W13.html'>W13</a><li><a href='W15.html'>W15</a><li><a href='W16.html'>W16</a></li>
+                     <li class='has-children'><a href='About.html'>About</a><ul class='dropdown'><li><a href='w2-w8.html'>w2-w8</a><li><a href='w3.html'>w3</a><li><a href='w5.html'>w5</a><li><a href='W9.html'>W9</a><li><a href='W11.html'>W11</a><li><a href='W13.html'>W13</a><li><a href='W15.html'>W15</a><li><a href='W16.html'>W16</a></li>
                       </ul>
                 </nav>
               </div>
